--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,25 @@
 	        <optional>true</optional>
 	    </dependency>
 	    
+	    
+	    
+	    <!-- log4j -->
+		<dependency> 
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-jersey</artifactId>
+		    <exclusions>
+		        <exclusion>
+		            <artifactId>log4j-over-slf4j</artifactId>
+		            <groupId>org.slf4j</groupId>
+		        </exclusion>
+		    </exclusions>
+		</dependency>
+		<dependency> <!-- 引入log4j -->
+			<groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+	    
 	    <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
